# fmandel-gpu-dll

./: .gitignore  CMakeLists.txt  README.md
src/: MandelbrotJNI.cpp  kernel.cu  kernel.cuh
